--- a/COPKG/libtiff/libtiff/packages.config
+++ b/COPKG/libtiff/libtiff/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="libjpeg" version="9.0.1.3" targetFramework="Native" />
-  <package id="libjpeg.redist" version="9.0.1.3" targetFramework="Native" />
-  <package id="zlib" version="1.2.8.6" targetFramework="Native" />
-  <package id="zlib.redist" version="1.2.8.6" targetFramework="Native" />
+  <package id="libjpeg" version="9.0.1.4" targetFramework="Native" />
+  <package id="libjpeg.redist" version="9.0.1.4" targetFramework="Native" />
+  <package id="zlib" version="1.2.8.8" targetFramework="Native" />
+  <package id="zlib.v120.windesktop.msvcstl.dyn.rt-dyn" version="1.2.8.8" targetFramework="native" />
+  <package id="zlib.v140.windesktop.msvcstl.dyn.rt-dyn" version="1.2.8.8" targetFramework="native" />
 </packages>
